# smolvault

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  docker-compose.yml  justfile
.claude/: settings.json
.claude/commands/: feature.md
crates/api/: Cargo.toml
crates/api/src/: config.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: models.rs
docs/: architecture.md  setup.md
docs/decisions/: 001-initial-stack.md
docs/features/: _template.md  frontend-foundations.md
web/: .prettierrc.json5  next.config.ts  package-lock.json  package.json
web/src/app/: page.tsx
web/src/lib/: api.ts
