[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
